# proto-project

./: .clang-format  .gitignore  .travis.yml  CHANGES.md  CMakeLists.txt  INSTALL.md  LICENSE  LICENSE.md  Makefile  README.md
.github/ISSUE_TEMPLATE/: bug_report.md  build_problem.md  feature_request.md  question.md
.github/workflows/: ci.yml  workflow.yml
src/build-scripts/: build_abi_tools.bash  build_cmake.bash  build_libpng.bash  build_libtiff.bash  build_llvm.bash  build_opencolorio.bash  build_openexr.bash  build_openimageio.bash  build_pybind11.bash  build_zlib.bash  ci-build-and-test.bash  ci-build.bash  ci-startup.bash  ci-test.bash  gh-installdeps-centos.bash  gh-installdeps.bash  gh-win-installdeps.bash  hidesymbols.map  install_homebrew_deps.bash  nosanitize.txt
src/cmake/: check_is_enabled.cmake  checked_find_package.cmake  colors.cmake  compiler.cmake  externalpackages.cmake  fancy_add_executable.cmake  install.cmake  packaging.cmake  pythonutils.cmake  testing.cmake  testutils.cmake
src/cmake/modules/: FindOpenEXR.cmake  FindOpenImageIO.cmake
src/doc/: Description.txt  Welcome.txt
src/guiapp/: CMakeLists.txt  MyMainWindow.cpp  MyMainWindow.h  guiapp.cpp  mainwin.cpp  mainwin.h
src/include/: CMakeLists.txt
src/include/Proto/: Proto.h  export.h.in  version.h.in
src/libProto/: CMakeLists.txt  README.md  proto.cpp  proto_test.cpp
src/protobin/: CMakeLists.txt  protobin.cpp
src/python/: CMakeLists.txt  pyproto.cpp
testsuite/: runtest.py
testsuite/python-proto/: run.py
testsuite/python-proto/ref/: out.txt
testsuite/python-proto/src/: test_proto.py
